k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwd-app-service
  labels:
    app: hwd-app
spec:
  selector:
    app: hwd-app
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8080
  type: ClusterIP
