k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hwd-app-ingress
spec:
  rules:
  - host: local.hwd-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hwd-app-service
            port:
              number: 80
